[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Hamster.gd" type="Script" id=2]
[ext_resource path="res://scenes/Sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/character/idle-down-up-sheet2.png" type="Texture" id=4]
[ext_resource path="res://scenes/Attacks/HamsterDown.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Attacks/HamsterLeft.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Attacks/HamsterRight.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Attacks/HamsterUp.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/music/hit_sfx.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 55.6655, 55.9408 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 40, 50 )

[node name="Hamster" instance=ExtResource( 1 )]

position = Vector2( 44.3345, 45.9408 )
script = ExtResource( 2 )
walk_speed = 250
dash_speed = 350

[node name="Sprite" parent="." index="1" instance=ExtResource( 3 )]

texture = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="Dash" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="DashCooldown" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="HitBox" parent="CollisionBoxes" index="0"]

_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBoxes/HitBox" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="HamsterDown" parent="CollisionBoxes" index="1" instance=ExtResource( 5 )]

position = Vector2( 5.6655, 64.0592 )

[node name="HamsterLeft" parent="CollisionBoxes" index="2" instance=ExtResource( 6 )]

position = Vector2( -54.3345, 4.0592 )
monitoring = false
monitorable = false
_sections_unfolded = [ "Collision", "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="HamsterRight" parent="CollisionBoxes" index="3" instance=ExtResource( 7 )]

position = Vector2( 55.6655, 4.0592 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index" ]

[node name="HamsterUp" parent="CollisionBoxes" index="4" instance=ExtResource( 8 )]

position = Vector2( 5.6655, -65.9408 )
damage = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="6"]

position = Vector2( 5.6655, 4.0592 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AttackTimer" parent="." index="8"]

wait_time = 0.3

[node name="AttackCooldown" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="Dash" to="." method="_on_Dash_timeout"]

[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]


